fix: Drop the forced snapshot lookup
There's a bit too much risk of the content jumping and we haven't found
a way to conveniently express the "temporary" nature of the initial
result.

Furthermore, the optimizations introduced in the previous couple of
patches should reduce the lag somewhat too.

--- a/css/popup.css
+++ b/css/popup.css
@@ -50,10 +50,6 @@
   display: none;
 }
 
-.window.-snapshot-result {
-  opacity: 0.8;
-}
-
 /* Tab bar */
 
 .tab-bar {
